--- a/contacts.html
+++ b/contacts.html
@@ -108,6 +108,13 @@
         <hr>
         <p> ® 2025 GYM.COM.Все права защищены</p>
     </footer>
+            <script>
+        function checkEmail() {
+            let email = document.querySelector('#emailForm').value;
+            if (!form.includes("@")) alert('Нет символа @');
+            else if (!form.includes(".")) alert('Нет символа .');
+            else alert('все топ!')
+        }
+    </script>
 </body>
-
 </html>
